--- a/core/app_admin/templates/add-article.html
+++ b/core/app_admin/templates/add-article.html
@@ -9,9 +9,9 @@
                <div class="col-md-12">
                     <h2 class="text-center">Saisir les Articles</h2>
                     <form action="" method="Post">
-                        {%csrf_token%}
+                        {% csrf_token %}
                     {{form.as_p}}
-                    <button class="btn btn-primary btn-block"> Enregistrer</button>
+                    <button type="submit" class="btn btn-primary btn-block"> Enregistrer</button>
                 </form>
                </div>
           </div>
