--- a/core/app_admin/templates/app_admin/update-article.html
+++ b/core/app_admin/templates/app_admin/update-article.html
@@ -7,12 +7,16 @@
         <div class="container">
           <div class="row">
                <div class="col-md-12">
-                    <h2 class="text-center">Saisir les Articles</h2>
+                    <div class="card mt-2">
+                        <div class="card-body">
+                            <h2 class="text-center">Modifications des Articles</h2>
                     <form action="" method="Post" enctype="multipart/form-data">
                         {% csrf_token %}
                     {{form.as_p}}
-                    <button type="submit" class="btn btn-primary btn-block"> Enregistrer</button>
+                    <button type="submit" class="btn btn-primary btn-block">Modifier</button>
                 </form>
+                        </div>
+                    </div>
                </div>
           </div>
        </div>
