--- a/core/app_admin/templates/my_article.html
+++ b/core/app_admin/templates/my_article.html
@@ -28,8 +28,8 @@
                                     <td><a href="">{{arty.title}}</a></td>
                                     <td><a href="">{{arty.desc|truncatewords:8}}</a></td>
                                     <td>
-                                        <a href="" class="btn btn-info btn-sm"> <i class="fas fa-edit"></i></a>
-                                        <a href="" class="btn btn-danger btn-sm"> <i class="fas fa-trash"></i></a>
+                                        <a href="{% url 'update-article' arty.pk %}" class="btn btn-info btn-sm"> <i class="fas fa-edit"></i></a>
+                                        <a href="{% url 'delete-article' arty.pk %}" class="btn btn-danger btn-sm"> <i class="fas fa-trash"></i></a>
                                     </td>
                                  </tr>
                                 {%endfor%}
