--- a/core/blog/templates/detail.html
+++ b/core/blog/templates/detail.html
@@ -6,7 +6,9 @@
        <div class="container">
         <div class="row">
             <div class="col-md-8">
+                {% if article.image %}
                 <img src="{{article.image.url}}" alt="">
+                {% endif %}
                 <h2>{{article.title}}</h2>
                 <p>{{article.desc}}</p>
             </div>
@@ -16,7 +18,9 @@
                 {% for art in aer %}
                 {% if art.id != article.id %}
                 <div class="col-md-8 mb-1">
+                {% if article.image %}
                  <img src="{{art.image.url}}" alt="" style="max-width: 210px;">
+                 {% endif %}
                 </div>
                 <div class="col-md-4">
                     <strong><p>{{ art.title}}</p></strong> <br>
