--- a/core/blog/templates/nav.html
+++ b/core/blog/templates/nav.html
@@ -34,7 +34,7 @@
           <!-- Dropdown menu -->
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="{%url 'my_article'%}">Ajouter un article</a>
             </li>
             <li>
               <a class="dropdown-item" href="#">Another action</a>
