--- a/core/app_admin/templates/admin.html
+++ b/core/app_admin/templates/admin.html
@@ -3,7 +3,7 @@
     <!-- Container wrapper -->
     <div class="container-fluid">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="{% url 'home'%}">MY_BLOG</a>
 
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"  aria-label="Toggle navigation"
@@ -16,7 +16,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!-- Link -->
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link</a>
+                    <a class="nav-link text-white" href="{%url 'my_article'%}">Mes Articles</a>
                 </li>
 
                 <!-- Dropdown -->
@@ -28,17 +28,17 @@
                     <!-- Dropdown menu -->
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="{% url 'borddash'%}">Tableau de Bord</a>
                         </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Another action</a>
+                         <li>
+                            <a class="dropdown-item" href="{% url 'home' %}">Articles Deja pPubliés</a>
                         </li>
-                        <li>
+                       <!-- <li>
                             <hr class="dropdown-divider" />
                         </li>
                         <li>
                             <a class="dropdown-item" href="#">Something else here</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </li>
             </ul>
